--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: run tests
-      run: docker build . --file Dockerfile --tag e2e-tests-playground:$(date +%s)
+      run: ./run_tests
