--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Tests
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "v2" ]
   pull_request:
     branches: [ "master" ]
 
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: run tests
-      run: ./run_tests_100_times ./run_tests
+      run: ./run_tests.sh
